模拟前后端的交互

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <h1>这是我的第一个页面</h1>
-    <button>点击</button>
+    <p>您的余额还有：<span id="amount">$number</span></p>
+    <form action="./path" method="POST">
+        <input type="submit" value="点我付款">
+    </form>
     <script src="./main.js"></script>
 </body>
 </html>
