动态创建script发送请求

--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
 <body>
     <h1>这是我的第一个页面</h1>
     <p>您的余额还有：<span id="amount">$number</span></p>
-    <form action="./path" method="POST">
-        <input type="submit" value="点我付款">
+    <button id="button">点我付款</button>
+    <!--
+    <form action="./path" method="POST" target="ppp">
+        <input type="submit" value="点我付款" id="button">
     </form>
+    <iframe src="about:blank" frameborder="0" name="ppp"></iframe>
+     -->
     <script src="./main.js"></script>
 </body>
 </html>
